samples/_failures_safe/1761515722_251e57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edee9854.c: In function ‘main’:
./samples/SAFE/__tmp_edee9854.c:153:9: error: expected expression at end of input
  153 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_edee9854.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_edee9854.c:153:9: error: expected declaration or statement at end of input
